--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -151,6 +151,23 @@
 
         {{!-- Powers Tab --}}
         <div class="tab powers-tab" data-group="primary" data-tab="powers">
+            <div class="powers-top-row">
+                <div class="powers-gutter">
+                </div>
+                <div class="wield-power">
+                    <button class="wield-power">Wield a Power</button>
+                    <span class="rule-text wield-rules">Presence DR12, or -d2 HP and no Powers for 1 hr</span>
+                </div>
+                <div class="powers-gutter">
+                </div>
+                <div class="uses-remaining">
+                    <div>
+                        <label class="stat-label uses-remaining-label">{{localize "MB.UsesRemaining"}}:</label>
+                        <input class="stat-input" name="data.powerUsesRemaining" type="number" value="{{data.powerUsesRemaining}}" data-dtype="Number" />
+                    </div>
+                    <span class="rule-text">PRESENCE+d4 times per day</span>
+                </div>
+            </div>
             <ol class="items-list inventory-list">
                 <li class="items-header flexrow">
                     <h3 class="item-name flexrow">{{localize "MB.ItemTypeScrollPlural"}}</h3>
