--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -491,11 +491,11 @@ alternately we could select as
   margin-bottom: 10px;
   font-family: "FetteTrumpDeutsch", fantasy, serif;
   font-size: 24px;
+  background-color: white;
   color: black;
-  background-color: #7a7971;
   border: none;
+  border-bottom: 2px solid #777;
   border-radius: 0;
-  /*box-shadow: 2px 2px white;*/
 }
 .morkborg.sheet.actor .sheet-body .wield-rules {
   text-align: center;
