--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -148,7 +148,7 @@
                 </ol>  
                 <div class="underarmor-row">
                     <div class="shield">
-                        <div>
+                        <div class="shield-fields">
                             <label class="stat-label">{{localize 'MB.Shield'}}?</label>
                             <input type="checkbox" />
                         </div>
